--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,8 +1,10 @@
 body{
     width:100%;
-    background-color: red;
+    background-color: #000;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 h1{
-    color: brown;
+    color:#fff;
 }
