--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -30,3 +30,11 @@ body{
     color: aquamarine;
     font-size: 16px;
 }
+
+/* FOOTER */
+.footer--copyright{
+    color: grey;
+    font-size: 21px;
+    text-align: right;
+    padding-right: 10px;
+}
